Remediated code and updated README with summary of changes